--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
                                                             <div class="sc-info"><h3>Модератор</h3></div>
                                                         </div>
                                                         <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-pic"><img src="images/team/diagelev.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-info">
                                                             <h4><span>Дягелев Михаил Юрьевич</span><br> к.т.н., доцент Кафедры «Водоснабжение и водоподготовка», ФГБОУ ВО «ИжГТУ имени М.Т.Калашникова», Ижевск</h4>
                                                             </div>                                                            
