--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
 
                                                          <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4><span>Лобахина Наталья Александровна</span><br>, к.э.н., доцент кафедры инновационного менеджмента и предпринимательства РГЭУ (РИНХ), Ростов-на-Дону</h4></div>
+                                                            <div class="sc-name"><h4><span>Лобахина Наталья Александровна</span><br>к.э.н., доцент кафедры инновационного менеджмента и предпринимательства РГЭУ (РИНХ), Ростов-на-Дону</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Заказная разработка как основа проектного обучения: опыт реализации проектно-образовательных интенсивов по модели Университета 20.35</h3>
                                                             </div> 
@@ -655,7 +655,7 @@
                                                         <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/krasavina.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-info">
-                                                            <h4><span>Красавина Юлия Витальевна</span><br> к.п.н., доцент, Кафедра «Инженерная графика, профессиональная педагогика и технология рекламы», ФГБОУ ВО «ИжГТУ имени М.Т.Калашникова», Ижевск</h4>
+                                                            <h4><span>Красавина Юлия Витальевна</span><br> к.пед.наук, доцент, Директор Центра инклюзивного обучения ФГБОУ ВО «ИжГТУ имени М.Т.Калашникова», Ижевск</h4>
                                                             </div>                                                            
 
                                                             <div class="clearfix"></div>                                                      
@@ -694,7 +694,7 @@
 
                                                          <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/starshinova.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4><span>Старшинова Татьяна Александровна</span><br> к.пед.н,доцент  Кафедра инженерной педагогики и психологии КНИТУ, Казань</h4></div>
+                                                            <div class="sc-name"><h4><span>Старшинова Татьяна Александровна</span><br> к.пед.н, доцент  Кафедра инженерной педагогики и психологии КНИТУ, Казань</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Интегративная подготовка преподавателей инженерных вузов к работе со студентами с инвалидностью и ОВЗ в on-line формате</h3>
                                                             </div>   
