--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                     <div class="spacer-single"></div>
                                     <div class="spacer-single"></div>
                                     <div class="clearfix"></div>
-                                    <a href="https://leader-id.ru/events/188334" class="btn-custom scroll-to">Участвовать</a>
+                                    <a href="https://leader-id.ru/events/188334" class="btn-custom scroll-to" target="_blank">Участвовать</a>
                             </div>
                         </div>
                     </div>
@@ -308,7 +308,7 @@
                                                         <div class="schedule-item" data-toggle="collapse" data-parent="#accordion" href="#day1_11">
                                                             <div class="sc-time">11:00 - 12:00<br>(МСК)</div>
                                                             <div class="sc-info">
-                                                                <h3>Секция <br>Индивидуальные  образовательные траектории и сетевое взаимодействие вузов</h3>
+                                                                <h3>Секция <br>Индивидуальные образовательные траектории и сетевое взаимодействие вузов</h3>
                                                             </div>
                                                             <div class="sc-more mr10">
                                                               
@@ -340,15 +340,6 @@
                                                          <div class="schedule-item">
                                                             <div class="sc-info"><h3>Спикеры</h3></div>
                                                         </div>
-
-                                                         <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/larionova.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4><span>Ларионова Виола Анатольевна</span><br> заместитель проректора по образовательным технологиям, к.ф.-м.н., доцент, УрФУ, Екатеринбург</h4></div>
-                                                            <div class="sc-info">
-                                                            <h3></h3>
-                                                            </div>       
-                                                            <div class="clearfix"></div>                                               
-                                                         </div>
 
                                                         <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/krasheninnikova.jpg" class="img-circle" alt=""></div>
@@ -1000,7 +991,7 @@
                                                             <div class="sc-pic"><img src="images/team/simonov.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>Симонов Николай Владимирович</span><br> директор студии разработки VR/AR "InGame", Ижевск</h4></div>
                                                             <div class="sc-info">
-                                                            <h3></h3>
+                                                            <h3>Цифровые двойники в образовании</h3>
                                                             </div>   
                                                             <div class="clearfix"></div>                                                        
                                                          </div>  
@@ -1750,10 +1741,11 @@
                                 <div class="spacer-single"></div>
                             
                             <div class="col-md-6 text-center">
-                                <p class="lead wow fadeInUp"><h4>По итогам международной онлайн конференции "Цифровизация инженерного образования" выпускается сборник материалов, размещаемый на платформе научной электронной библиотеки РИНЦ <br>( <a href="https://elibrary.ru/">elibrary.ru</a> )</h4></p>  
+                                <p class="lead wow fadeInUp"><h4>По итогам международной онлайн конференции "Цифровизация инженерного образования" выпускается сборник материалов, размещаемый на платформе научной электронной библиотеки РИНЦ <br>( <a href="https://elibrary.ru/" target="_blank">elibrary.ru</a> )</h4></p>  
                                 <p class="lead wow fadeInUp"><h4>
                                 Материалы для публикации просим направить до 30 марта 2021 года на электроную почту <a>eedu@istu.ru</a></h4></p>
-                                <p class="lead wow fadeInDown"><a href="doc/article.doc"><h4>Скачать требования к статьям</h4></a></p>
+                                <p class="lead wow fadeInDown"><a href="doc/article.doc" target="_blank"><h4>Требования к статьям (.doc)</h4></a></p>
+                                <p class="lead wow fadeInDown"><a href="doc/article.pdf" target="_blank"><h4>Требования к статьям (.pdf)</h4></a></p>
                                 <div class="clearfix"></div>
                             </div>
                             <div class="col-md-6 text-center">
@@ -1782,7 +1774,7 @@
                                 <div class="spacer-single"></div>
                                 <div class="spacer-single"></div>
                                 <div class="clearfix"></div>
-                                <a href="https://leader-id.ru/events/188334" class="btn-custom scroll-to">Участвовать</a>
+                                <a href="https://leader-id.ru/events/188334" class="btn-custom scroll-to" target="_blank">Участвовать</a>
                             </div>
                         </div>                      
 
@@ -1829,9 +1821,9 @@
 
                     <div class="col-md-6 text-right sm-text-center">
                         <div class="social-icons">                                                      
-                            <a href="https://vk.com/istu_do"><i class="fa fa-vk fa-lg"></i></a>
-                            <a href="https://www.youtube.com/channel/UC7cq2QI_QOPItIST7QuuBhQ"><i class="fa fa-youtube fa-lg"></i></a>
-                            <a href="http://distant.istu.ru/"><i class="fa fa-globe fa-lg"></i></a>
+                            <a href="https://vk.com/istu_do" target="_blank"><i class="fa fa-vk fa-lg"></i></a>
+                            <a href="https://www.youtube.com/channel/UC7cq2QI_QOPItIST7QuuBhQ" target="_blank"><i class="fa fa-youtube fa-lg"></i></a>
+                            <a href="http://distant.istu.ru/" target="_blank"><i class="fa fa-globe fa-lg"></i></a>
                         </div>
                     </div>
                 </div>
