--- a/index.html
+++ b/index.html
@@ -1751,7 +1751,7 @@
                             </div>
                             <div class="col-md-6 col-md-offset-3 text-center">
                                 <p class="lead wow fadeInUp"><h4 style="color: white;">Заинтересовались темами конференции?</h4></p>
-                                <p class="lead wow fadeInUp"><h4 style="color: white;">Регестрируйтесь!</h4></p>
+                                <p class="lead wow fadeInUp"><h4 style="color: white;">Регистрируйтесь!</h4></p>
                                 <div class="spacer-single"></div>
                                 <div class="spacer-single"></div>
                                 <div class="spacer-single"></div>
