--- a/index.html
+++ b/index.html
@@ -1725,7 +1725,7 @@
                             <div class="col-md-6 text-center">
                                 <p class="lead wow fadeInUp"><h4>По итогам международной онлайн конференции "Цифровизация инженерного образования" выпускается сборник материалов, размещаемый на платформе научной электронной библиотеки РИНЦ <br>( <a href="https://elibrary.ru/" target="_blank">elibrary.ru</a> )</h4></p>  
                                 <p class="lead wow fadeInUp"><h4>
-                                Материалы для публикации просим направить до 30 марта 2021 года на электроную почту <a>eedu@istu.ru</a></h4></p>
+                                Материалы для публикации просим направить до 30 марта 2021 года на электронную почту <a>eedu@istu.ru</a></h4></p>
                                 <p class="lead wow fadeInDown"><a href="doc/article.doc" target="_blank"><h4>Требования к статьям (.doc)</h4></a></p>
                                 <p class="lead wow fadeInDown"><a href="doc/article.pdf" target="_blank"><h4>Требования к статьям (.pdf)</h4></a></p>
                                 <div class="clearfix"></div>
