--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         </div>
 
                         <div class="col-md-12 text-center wow fadeInDown">
-                        	<p class="lead wow fadeInUp"><h4>Международная онлайн конференция при участии ВУЗов, научных, образовательных учреждений и бизнеса для глобальной перезагрузки цифрового образования</h4></p>
+                        	<p class="lead wow fadeInUp"><h4>Международная онлайн конференция при участии университетов, научных, образовательных учреждений и бизнеса для глобальной перезагрузки цифрового образования</h4></p>
                             <div class="spacer-single"></div>
                         </div>
 
