--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
                                                         <div class="schedule-item" data-toggle="collapse" data-parent="#accordion2" href="#day2_11">
                                                             <div class="sc-time">11:00 - 12:00<br>(МСК)</div>
                                                             <div class="sc-info">
-                                                                <h3>Панельная дискуссия<br>Новая парадигма - Образование через всю жизнь</h3>
+                                                                <h3>Панельная дискуссия<br>Новая парадигма - образование через всю жизнь</h3>
                                                             </div>
                                                             <div class="sc-more mr10">
                                                               
