--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
                                                          </div>
                                                          <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/byakova.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4><span>Бякова Римма Римовна</span><br>Руководитель АОУ УР "Региональный образовательный центр одаренных детей", Ижевск</h4></div>
+                                                            <div class="sc-name"><h4><span>Бякова Римма Римовна</span><br>руководитель АОУ УР "Региональный образовательный центр одаренных детей", Ижевск</h4></div>
                                                             <div class="sc-info">
                                                             <h3></h3>
                                                             </div>    
@@ -1407,13 +1407,25 @@
                         <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
                                 <figure class="picframe s2 mb30">
+                                    <img src="images/team/krohina.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Крохина Ирина Геннадьевна</h3>
+                                <span class="subtitle2">первый заместитель министра образования и науки Удмуртской Республики, Ижевск</span>
+                            </div>
+                        </div>
+
+                        <!-- <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
                                     <img src="images/team/feshenko.jpg" class="img-responsive" alt="">
                                 </figure>
 
                                 <h3>Фещенко Артем Викторович</h3>
                                 <span class="subtitle2">ст. преподаватель кафедры  гуманитарных проблем информатики, ТГУ, Томск</span>
                             </div>
-                        </div>
+                        </div> -->
+
 
                         <div class="clearfix"></div>
 
@@ -1734,6 +1746,92 @@
                             </div>
                         </div>
 
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/larionova.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Лобахина Наталья Александровна</h3>
+                                <span class="subtitle2">к.э.н., доцент кафедры инновационного менеджмента и предпринимательства РГЭУ (РИНХ), Ростов-на-Дону</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/chinkova.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Чинкова Дарья Михайловна</h3>
+                                <span class="subtitle2">заместитель генерального директора Образовательной платформы "Юрайт", Москва</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/andreeva.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Андреева Юлия Петровна</h3>
+                                <span class="subtitle2">руководитель проектов АНО ДПО "Высшая техническая школа", Тула</span>
+                            </div>
+                        </div>
+
+                        <div class="clearfix"></div>
+
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/kalashnikova.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Калашникова Татьяна Григорьевна</h3>
+                                <span class="subtitle2">к.т.н., доцент кафедры "Инженерная графика и компьютерный дизайн" ЮФУ, Ростов-на-Дону</span>
+                            </div>
+                        </div>
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/shelchkova.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Щелчкова Оксана Васильевна</h3>
+                                <span class="subtitle2">директор АНО "ЦЕНТР ЦИФРОВОГО ОБРАЗОВАНИЯ ДЕТЕЙ "IТ-КУБ", Ижевск</span>
+                            </div>
+                        </div>
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/ulianova.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Ульянова Татьяна Николаевна</h3>
+                                <span class="subtitle2">зам.директора по дополнительному образованию Руководитель РДТ "Кванториум", Ижевск</span>
+                            </div>
+                        </div>
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/byakova.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Бякова Римма Римовна</h3>
+                                <span class="subtitle2">руководитель АОУ УР "Региональный образовательный центр одаренных детей", Ижевск</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/bakumenko.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Бакуменко Ольга Аркадьевна</h3>
+                                <span class="subtitle2">к.э.н., ведущий аналитик Центра организации науки и академического развития ВШЭ в Санкт-Петербурге</span>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
