--- a/index.html
+++ b/index.html
@@ -1749,7 +1749,7 @@
                         <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
                                 <figure class="picframe s2 mb30">
-                                    <img src="images/team/larionova.jpg" class="img-responsive" alt="">
+                                    <img src="images/team/lobahina.jpg" class="img-responsive" alt="">
                                 </figure>
 
                                 <h3>Лобахина Наталья Александровна</h3>
