--- a/index.html
+++ b/index.html
@@ -708,7 +708,16 @@
                                                             <h3>Интегративная подготовка преподавателей инженерных вузов к работе со студентами с инвалидностью и ОВЗ в онлайн-формате</h3>
                                                             </div>   
                                                             <div class="clearfix"></div>                                                        
-                                                         </div>                                                   
+                                                         </div> 
+                                                         <div class="schedule-item">
+                                                            <div class="sc-pic"><img src="images/team/zhuikova.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4><span>Жуйкова Ольга Викторовна</span><br>к.п.н, доцент, зав. кафедрой «Инженерная графика, профессиональная педагогика и технология рекламы» ИжГТУ имени М.Т.Калашникова, Ижевск</h4></div>
+                                                            <div class="sc-info">
+                                                            <h3></h3>
+                                                            </div>   
+                                                            <div class="clearfix"></div>                                                        
+                                                         </div>
+
                                                         </div>
                                                     </div>
                                                 </div>
@@ -1221,6 +1230,15 @@
                                                             <div class="sc-name"><h4><span>ГАРЕЕВ АНДРЕЙ АЛЕКСАНДРОВИЧ</span><br>ст.преподаватель кафедры "Английский язык" ИжГТУ имени М.Т.Калашникова, Ижевск</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Учебные блоги в организации самостоятельной работы для студентов технического вуза</h3>
+                                                            </div>
+                                                            <div class="clearfix"></div>
+                                                         </div>
+
+                                                         <div class="schedule-item">
+                                                            <div class="sc-pic"><img src="images/team/faizulin.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4><span>Файзулин Максим Игоревич</span><br>ст.преподаватель кафедры "Экономика и управление организацией" ИжГТУ имени М.Т.Калашникова, директор АУ УР «Молодежный центр Удмуртской Республики», Ижевск</h4></div>
+                                                            <div class="sc-info">
+                                                            <h3></h3>
                                                             </div>
                                                             <div class="clearfix"></div>
                                                          </div>
