--- a/index.html
+++ b/index.html
@@ -1288,7 +1288,7 @@
                                                         </div> 
                                                     
                                                         <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-pic"><img src="images/team/rgeu.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4>Ростовский государственный экономический университет (РИНХ)</h4></div>
                                                             <div class="sc-info">
                                                             <h3></h3>
@@ -1296,7 +1296,7 @@
                                                             <div class="clearfix"></div>                                                            
                                                          </div>
                                                           <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-pic"><img src="images/team/ulgtu.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4>Ульяновский государственный технический университет (УлГТУ)</h4></div>
                                                             <div class="sc-info">
                                                             <h3></h3>
@@ -1304,7 +1304,7 @@
                                                             <div class="clearfix"></div>                                                            
                                                          </div>
                                                           <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-pic"><img src="images/team/istu.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4>ИжГТУ имени М.Т.Калашникова</h4></div>
                                                             <div class="sc-info">
                                                             <h3></h3>
@@ -1348,7 +1348,7 @@
                                                     
                                                         <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/nagovitsyn.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4><span>НАГОВИЦЫН СТАНИСЛАВ СЕРГЕЕВИЧ</span><br>инженер-программист Института образовательных технологий, магистрант кафедры "Информационные системы" ИжГТУ имени М.Т.Калашникова, Ижевск</h4></div>
+                                                            <div class="sc-name"><h4><span>НАГОВИЦЫН СТАНИСЛАВ СЕРГЕЕВИЧ</span><br>магистрант кафедры "Информационные системы" ИжГТУ имени М.Т.Калашникова, Ижевск <br></h4></div>
                                                             <div class="sc-info">
                                                             <h3>Виртуальные лабораторные на основе системы Unity</h3>
                                                             </div>
