--- a/index.html
+++ b/index.html
@@ -624,10 +624,10 @@
                                                          </div>
 
                                                          <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4><span>ВАХРУШЕВА Наталья Олеговна</span><br>зам. директора по технологическому развитию ЗАО "Ижевский нефтяной научный центр", Ижевск</h4></div>
+                                                            <div class="sc-pic"><img src="images/team/deev.JPG" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4><span>Деев Олег Александрович</span><br>и.о. начальника управления по информационным технологиям ЗАО «ИННЦ», Ижевск</h4></div>
                                                             <div class="sc-info">
-                                                            <h3></h3>
+                                                            <h3>Организация процесса разработки программного обеспечения, создание единой информационной среды для участников проектов в ЗАО «ИННЦ»</h3>
                                                             </div> 
                                                             <div class="clearfix"></div>                                                           
                                                          </div>
