--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Конференция ИжГТУ</title>
+    <title>Международная онлайн-конференция ИжГТУ им. М.Т. Калашникова</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta property="og:title" content="Международная онлайн-конференция ИжГТУ им. М.Т. Калашникова" />
+    <meta property="og:url" content="http://distant.istu.ru/conf/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Международная онлайн-конференция ИжГТУ им. М.Т. Калашникова" />
+    <meta property="og:image" content="images/background/bg_source.jpg" />
 
     <!--[if lt IE 9]>
 	<script src="js/html5shiv.js"></script>
