--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
                                                             <div class="sc-pic"><img src="images/team/zhuikova.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>Жуйкова Ольга Викторовна</span><br>к.п.н, доцент, зав. кафедрой «Инженерная графика, профессиональная педагогика и технология рекламы» ИжГТУ имени М.Т.Калашникова, Ижевск</h4></div>
                                                             <div class="sc-info">
-                                                            <h3></h3>
+                                                            <h3>Разработка электронного учебного курса по начертательной геометрии для дистанционного сопровождения образовательного процесса у студентов с нарушением слуха</h3>
                                                             </div>   
                                                             <div class="clearfix"></div>                                                        
                                                          </div>
