--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
 
                                                          <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/deev.JPG" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4><span>Деев Олег Александрович</span><br>и.о. начальника управления по информационным технологиям ЗАО «ИННЦ», Ижевск</h4></div>
+                                                            <div class="sc-name"><h4><span>Деев Олег Александрович</span><br>и.о. начальника управления по информационным технологиям ЗАО «Ижевский нефтяной научный центр», Ижевск</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Организация процесса разработки программного обеспечения, создание единой информационной среды для участников проектов в ЗАО «ИННЦ»</h3>
                                                             </div> 
@@ -1215,7 +1215,7 @@
                                                             <div class="sc-pic"><img src="images/team/ustinova.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>УСТИНОВА НАТАЛЬЯ ПАВЛОВНА</span><br>к.п.н., руководитель группы управления внеучебной работы со студентами ИжГТУ имени М.Т.Калашникова, Ижевск</h4></div>
                                                             <div class="sc-info">
-                                                            <h3></h3>
+                                                            <h3>Сетевое партнерство в практике воспитательной работы со студентами: возможности и перспективы</h3>
                                                             </div> 
                                                             <div class="clearfix"></div>                                                           
                                                          </div>
@@ -1353,9 +1353,18 @@
                                                     
                                                         <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/nagovitsyn.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4><span>НАГОВИЦЫН СТАНИСЛАВ СЕРГЕЕВИЧ</span><br>магистрант кафедры "Информационные системы" ИжГТУ имени М.Т.Калашникова, Ижевск <br></h4></div>
+                                                            <div class="sc-name"><h4><span>НАГОВИЦЫН СТАНИСЛАВ СЕРГЕЕВИЧ</span><br>магистрант кафедры "Информационные системы" ИжГТУ имени М.Т.Калашникова, Ижевск<br></h4></div>
                                                             <div class="sc-info">
                                                             <h3>Виртуальные лабораторные на основе системы Unity</h3>
+                                                            </div>
+                                                             <div class="clearfix"></div>
+                                                         </div>
+
+                                                         <div class="schedule-item">
+                                                            <div class="sc-pic"><img src="images/team/meteshkina.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4><span>Метешкина Виктория Александровна</span><br>студентка 4 курса машиностроительного факультета, председатель студенческого совета ИжГТУ<br></h4></div>
+                                                            <div class="sc-info">
+                                                            <h3>Настоящее и будущее современного студента</h3>
                                                             </div>
                                                              <div class="clearfix"></div>
                                                          </div>
