--- a/index.html
+++ b/index.html
@@ -1012,10 +1012,10 @@
                                                     
                                                     
                                                         <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4><span>ЕМЕЦ ИГОРЬ ВИКТОРОВИЧ</span><br>руководитель направления по работе с госсектором на территории УР ПАО "ВымпелКом", Ижевск</h4></div>
+                                                            <div class="sc-pic"><img src="images/team/haraev.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4><span>Хараев Геннадий Олегович</span><br>ст. менеджер дирекции по развитию нового бизнеса ПАО "ВымпелКом", Ижевск</h4></div>
                                                             <div class="sc-info">
-                                                            <h3>Анализ пользовательского поведения</h3>
+                                                            <h3>Скоринг абитуриентов при поступлении и во время учебы</h3>
                                                             </div>
                                                             <div class="clearfix"></div>
                                                          </div>
@@ -1109,7 +1109,7 @@
                                                          </div>  
 
                                                          <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-pic"><img src="images/team/kuznetsov.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>Кузнецов Александр Владимирович</span><br>начальник отдела цифровых образовательных ресурсов ЦЦОТ ТПУ, Томск</h4></div>
                                                             <div class="sc-info">
                                                             <h3></h3>
@@ -1362,7 +1362,7 @@
 
                                                          <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/meteshkina.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4><span>Метешкина Виктория Александровна</span><br>студентка 4 курса машиностроительного факультета, председатель студенческого совета ИжГТУ<br></h4></div>
+                                                            <div class="sc-name"><h4><span>Метешкина Виктория Александровна</span><br>студентка 4 курса машиностроительного факультета, председатель студенческого совета ИжГТУ имени М.Т.Калашникова, Ижевск<br></h4></div>
                                                             <div class="sc-info">
                                                             <h3>Настоящее и будущее современного студента</h3>
                                                             </div>
@@ -1873,6 +1873,18 @@
                                 <span class="subtitle2">к.э.н., ведущий аналитик центра организации науки и академического развития НИУ "ВШЭ" в Санкт-Петербурге, Санкт-Петербург</span>
                             </div>
                         </div>
+                        <div class="clearfix"></div>
+
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/haraev.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Хараев Геннадий Олегович</h3>
+                                <span class="subtitle2">ст. менеджер дирекции по развитию нового бизнеса ПАО "ВымпелКом", Ижевск</span>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
@@ -2016,8 +2028,7 @@
                                 <p class="lead wow fadeInUp"><h4>По итогам международной онлайн-конференции "Цифровизация инженерного образования" выпускается сборник материалов, размещаемый на платформе научной электронной библиотеки РИНЦ <br>( <a href="https://elibrary.ru/" target="_blank">elibrary.ru</a> )</h4></p>  
                                 <p class="lead wow fadeInUp"><h4>
                                 Материалы для публикации просим направить до 30 марта 2021 года на электронную почту <a>eedu@istu.ru</a></h4></p>
-                                <p class="lead wow fadeInDown"><a href="doc/article.doc" target="_blank"><h4>Требования к статьям (.doc)</h4></a></p>
-                                <p class="lead wow fadeInDown"><a href="doc/article.pdf" target="_blank"><h4>Требования к статьям (.pdf)</h4></a></p>
+                                <p class="lead wow fadeInDown"><a href="http://clck.ru/TjBaZ" target="_blank"><h4>Требования к статьям</h4></a></p>
                                 <div class="clearfix"></div>
                             </div>
                             <div class="col-md-6 text-center">
