--- a/index.html
+++ b/index.html
@@ -839,10 +839,10 @@
                                                          </div>
 
                                                          <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-pic"><img src="images/team/gimbitskiy.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>ГИМБИЦКИЙ Артур Вячеславович</span><br>директор Корпоративного института КНИТУ-КАИ, Казань</h4></div>
                                                             <div class="sc-info">
-                                                            <h3></h3>
+                                                            <h3>ДПО в период цифровой трансформации. Вызовы</h3>
                                                             </div>
                                                             <div class="clearfix"></div>
                                                          </div>
@@ -1874,6 +1874,17 @@
 
                                 <h3>Хараев Геннадий Олегович</h3>
                                 <span class="subtitle2">ст. менеджер дирекции по развитию нового бизнеса ПАО "ВымпелКом", Ижевск</span>
+                            </div>
+                        </div>
+                        
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/gimbitskiy.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Гимбицкий Артур Вячеславович</h3>
+                                <span class="subtitle2">директор Корпоративного института КНИТУ-КАИ, Казань</span>
                             </div>
                         </div>
 
