--- a/index.html
+++ b/index.html
@@ -2124,7 +2124,7 @@
         </div>
 		
 		<div id="floating-icon" class="sm-hide">
-			<a href="#section-register" class="scroll-to bg-orange"><i class="fa fa-pencil"></i> Запись</a>
+			<a href="#section-register" class="scroll-to bg-orange"><i class="fa fa-pencil"></i> Участие</a>
 		</div>
 
     </div>
