--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@
 
                                                          <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/malisheva.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4><span>Малышева Мария Юрьевна</span><br>старший преподаватель кафедры «Английский язык» ИжГТУ имени М.Т.Калашникова, Ижевск</h4></div>
+                                                            <div class="sc-name"><h4><span>Малышева Мария Юрьевна</span><br>ст. преподаватель кафедры «Английский язык» ИжГТУ имени М.Т.Калашникова, Ижевск</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Опыт создания веб-квеста «Escape Room» с использованием инструментов «Google»</h3>
                                                             </div> 
