--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
                                                             <div class="sc-pic"><img src="images/team/fominov.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>ФОМИНОВ МИХАИЛ АЛЕКСАНДРОВИЧ</span><br>первый заместитель министра информатизации и связи Удмуртской Республики, Ижевск</h4></div>
                                                             <div class="sc-info">
-                                                            <h3>Выпускник - реальность и ожидание</h3>
+                                                            <h3>Проблемы взаимодействия техникумов и предприятий в реализации образовательных проектов</h3>
                                                             </div>    
 
                                                             <div class="clearfix"></div>                                                        
@@ -953,7 +953,7 @@
                                                             <div class="sc-pic"><img src="images/team/shelchkova.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>Щелчкова Оксана Васильевна</span><br>директор АНО "ЦЕНТР ЦИФРОВОГО ОБРАЗОВАНИЯ ДЕТЕЙ "IТ-КУБ", Ижевск</h4></div>
                                                             <div class="sc-info">
-                                                            <h3></h3>
+                                                            <h3>Роль IT-куба в формировании цифровой грамотности населения региона</h3>
                                                             </div>    
 
                                                             <div class="clearfix"></div>                                                        
@@ -962,16 +962,16 @@
                                                             <div class="sc-pic"><img src="images/team/ulianova.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>Ульянова Татьяна Николаевна</span><br>зам.директора по дополнительному образованию, руководитель РДТ "Кванториум", Ижевск</h4></div>
                                                             <div class="sc-info">
-                                                            <h3></h3>
+                                                            <h3>"Кванториум" - открытая площадка для сотрудничества</h3>
                                                             </div>    
 
                                                             <div class="clearfix"></div>                                                        
                                                          </div>
                                                          <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/byakova.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4><span>Бякова Римма Римовна</span><br>руководитель АОУ УР "Региональный образовательный центр одаренных детей", Ижевск</h4></div>
+                                                            <div class="sc-pic"><img src="images/team/efimova.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4><span>Ефимова Анастасия Юрьевна</span><br>заместитель директора по научно-методической работе АОУ УР "Региональный образовательный центр одаренных детей", Ижевск</h4></div>
                                                             <div class="sc-info">
-                                                            <h3></h3>
+                                                            <h3>Модель организации проектно-исследовательской деятельности школьников в АОУ УР "Региональный образовательный центр одаренных детей"</h3>
                                                             </div>    
 
                                                             <div class="clearfix"></div>                                                        
@@ -1947,11 +1947,11 @@
                         <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
                                 <figure class="picframe s2 mb30">
-                                    <img src="images/team/byakova.jpg" class="img-responsive" alt="">
+                                    <img src="images/team/efimova.jpg" class="img-responsive" alt="">
                                 </figure>
 
-                                <h3>Бякова Римма Римовна</h3>
-                                <span class="subtitle2">руководитель АОУ УР "Региональный образовательный центр одаренных детей", Ижевск</span>
+                                <h3>Ефимова Анастасия Юрьевна</h3>
+                                <span class="subtitle2">заместитель директора по научно-методической работе АОУ УР "Региональный образовательный центр одаренных детей", Ижевск</span>
                             </div>
                         </div>
 
